보험리스트 수정

--- a/html/팝업-가계약조회리스트.html
+++ b/html/팝업-가계약조회리스트.html
@@ -57,8 +57,10 @@
       <div class="insuranceList">
         <div href="#" class="insurance">
           <div class="info">
-            <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
-            <div class="date"><span class="state">심사대상</span>106200573201910141</div>
+            <div class="inner">
+              <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
+              <div class="date"><span class="state">심사대상</span>106200573201910141</div>
+            </div>
           </div>
           <div class="payment">
             <ul>
@@ -79,8 +81,10 @@
         </div>
         <div href="#" class="insurance">
           <div class="info">
-            <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
-            <div class="date"><span class="state">심사대상</span>106200573201910141</div>
+            <div class="inner">
+              <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
+              <div class="date"><span class="state">심사대상</span>106200573201910141</div>
+            </div>
           </div>
           <div class="payment">
             <ul>
@@ -101,8 +105,10 @@
         </div>
         <div href="#" class="insurance">
           <div class="info">
-            <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
-            <div class="date"><span class="state">심사대상</span>106200573201910141</div>
+            <div class="inner">
+              <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
+              <div class="date"><span class="state">심사대상</span>106200573201910141</div>
+            </div>
           </div>
           <div class="payment">
             <ul>
@@ -123,8 +129,10 @@
         </div>
         <div href="#" class="insurance">
           <div class="info">
-            <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
-            <div class="date"><span class="state">심사대상</span>106200573201910141</div>
+            <div class="inner">
+              <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
+              <div class="date"><span class="state">심사대상</span>106200573201910141</div>
+            </div>
           </div>
           <div class="payment">
             <ul>
@@ -145,8 +153,10 @@
         </div>
         <div href="#" class="insurance">
           <div class="info">
-            <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
-            <div class="date"><span class="state">심사대상</span>106200573201910141</div>
+            <div class="inner">
+              <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
+              <div class="date"><span class="state">심사대상</span>106200573201910141</div>
+            </div>
           </div>
           <div class="payment">
             <ul>
