서브페이지 상단 닫기버튼 추가

--- a/html/가입현황.html
+++ b/html/가입현황.html
@@ -712,6 +712,7 @@
       <!-- insuranceListBox : e -->
     </div>
     <!-- contentArea : e -->
+    <a href="#" class="btnClose"><span>닫기</span></a>
   </div>
 </div>
 </body>
