--- a/html/팝업-보장상세내역.html
+++ b/html/팝업-보장상세내역.html
@@ -13,6 +13,15 @@
   <script>
     $(function () {
       $(".tableScroll").mCustomScrollbar();
+
+      //탭
+      $(document).on("click", ".tabList li .tab", function () {
+        var target = $(this).closest("li");
+        var idx = target.index();
+        var targetCont = $(this).closest(".tabWrap").find("> .tabContent");
+        target.addClass("on").siblings().removeClass("on");
+        targetCont.eq(idx).addClass('on').siblings('.tabContent').removeClass("on");     
+      })
     })
   </script>
 </head>
@@ -65,7 +74,8 @@
             <a href="#" class="tab"><span>실손형 담보</span></a>
           </li>
         </ul>
-        <div class="tabContent">            
+        <!-- 정액형 담보 : s -->
+        <div class="tabContent on">            
           <table class="basicType">
             <colgroup>
               <col style="width:22%">
@@ -188,8 +198,10 @@
             </table>
           </div>
         </div>
+        <!-- 정액형 담보 : e -->
         
-        <div class="tabContent" style="display: none;">            
+        <!-- 실손형 담보 : s -->
+        <div class="tabContent">            
           <table class="basicType">
             <colgroup>
               <col style="width:22%">
@@ -300,6 +312,7 @@
             </table>
           </div>
         </div>
+        <!-- 실손형 담보 : e -->
       </div>
       <div class="noteBox">
         <dl>
