--- a/html/팝업-컨설팅전후비교.html
+++ b/html/팝업-컨설팅전후비교.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>컨설팅</title>
+  <title>팝업-컨설팅전후비교</title>
   <link rel="stylesheet" href="/asset/css/style.css">
   <script src="/asset/js/lib/jquery-3.4.1.min.js"></script>
   <script src="/asset/js/lib/jquery.mCustomScrollbar.min.js"></script>
