--- a/html/guide.html
+++ b/html/guide.html
@@ -137,8 +137,8 @@
   <h3 class="inTitle">sizeMiddle</h3>
   <a href="#" class="btnText sizeMiddle fillGray"><span>출력</span></a>
   <h3 class="inTitle">sizeBig</h3>
-  <a href="#" class="btnText sizeBig fillGray"><span>미리보기</span></a>
-  <a href="#" class="btnText sizeBig fillRed"><span>출력하기</span></a>
+  <button class="btnText sizeBig fillGray"><span>미리보기</span></button>
+  <button href="#" class="btnText sizeBig fillRed"><span>출력하기</span></button>
   <h3 class="inTitle">btnClose</h3>
   <a href="#" class="btnClose"><span>닫기</span></a>
   <a href="#" class="btnClose white"><span>닫기</span></a>
