--- a/html/가입현황.html
+++ b/html/가입현황.html
@@ -96,7 +96,7 @@
             <ul class="list">
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -129,7 +129,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -162,7 +162,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -195,7 +195,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -228,7 +228,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -261,7 +261,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -294,7 +294,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -327,7 +327,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -360,7 +360,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -393,7 +393,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
