--- a/html/그레프.html
+++ b/html/그레프.html
@@ -291,7 +291,7 @@
             <ul class="list">
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -324,7 +324,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -357,7 +357,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -390,7 +390,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -423,7 +423,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -456,7 +456,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -489,7 +489,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -522,7 +522,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -555,7 +555,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -588,7 +588,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
