--- a/html/컨설팅.html
+++ b/html/컨설팅.html
@@ -106,7 +106,7 @@
             <ul class="list">
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -139,7 +139,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -172,7 +172,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -205,7 +205,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -238,7 +238,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -271,7 +271,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -304,7 +304,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -337,7 +337,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -370,7 +370,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -403,7 +403,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
