--- a/html/sub.html
+++ b/html/sub.html
@@ -227,7 +227,7 @@
             <ul class="list">
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -260,7 +260,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -293,7 +293,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -326,7 +326,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -359,7 +359,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -392,7 +392,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -425,7 +425,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -458,7 +458,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -491,7 +491,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
@@ -524,7 +524,7 @@
               </li>
               <li>
                 <div class="item">
-                  <button class="name">홍길동</button>
+                  <button class="name"><span>홍길동</span></button>
                   <ul class="info">
                     <li class="text">
                       <span class="bday">1981.05.31</span>
