--- a/html/가입현황.html
+++ b/html/가입현황.html
@@ -12,8 +12,20 @@
   <script src="/asset/js/default.js"></script>
   <script>
     $(function () {
-      $(".contentScroll").mCustomScrollbar();
-      $(".memberList").mCustomScrollbar();
+      $(".contentScroll").mCustomScrollbar({
+        scrollInertia: 150,
+        callbacks: {
+          onInit: function() {
+            btnTop(this)
+          },
+          onUpdate: function() {
+            btnTop(this)
+          }
+        }
+      });
+      $(".memberList").mCustomScrollbar({
+        scrollInertia: 150
+      });
     })
   </script>
 </head>
