--- a/html/컨설팅.html
+++ b/html/컨설팅.html
@@ -477,19 +477,19 @@
           </div>
           <div class="contract">
             <dl>
-              <dt>정상계약</dt>
+              <dt class="new">정상계약</dt><!-- 계약 체크값 수정시 클래스 new 추가 -->
               <dd><strong>11</strong>건</dd>
             </dl>
           </div>
           <div class="payment">
             <dl>
-              <dt>월보험료</dt>
+              <dt class="new">월보험료</dt>
               <dd><strong>1,264,530</strong>원</dd>
             </dl>
           </div>
           <div class="state">
             <dl>
-              <dt>보장현황</dt>
+              <dt class="new">보장현황</dt>
               <dd>
                 <span class="noJoin"><strong>9</strong>미가입</span>
                 <span class="shortage"><strong>14</strong>부족</span>
