--- a/html/팝업-가계약 추가.html
+++ b/html/팝업-가계약 추가.html
@@ -12,7 +12,9 @@
   <script src="/asset/js/default.js"></script>
   <script>
     $(function () {
-      $(".tableScroll").mCustomScrollbar();
+      $(".tableScroll").mCustomScrollbar({
+        scrollInertia: 150
+      });
     })
   </script>
 </head>
