--- a/html/팝업-가계약조회리스트.html
+++ b/html/팝업-가계약조회리스트.html
@@ -12,7 +12,9 @@
   <script src="/asset/js/default.js"></script>
   <script>
     $(function () {
-      $(".contractScroll").mCustomScrollbar();
+      $(".contractScroll").mCustomScrollbar({
+        scrollInertia: 150
+      });
     })
   </script>
 </head>
@@ -58,8 +60,9 @@
         <div href="#" class="insurance">
           <div class="info">
             <div class="inner">
-              <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
+              <div class="name">(무)메리츠 케어프리보험 M-Basket1910</div>
               <div class="date"><span class="state">심사대상</span>106200573201910141</div>
+              <button class="btnEdit"><span>편집</span></button>
             </div>
           </div>
           <div class="payment">
@@ -82,8 +85,9 @@
         <div href="#" class="insurance">
           <div class="info">
             <div class="inner">
-              <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
+              <div class="name">(무)메리츠 케어프리보험 M-Basket1910</div>
               <div class="date"><span class="state">심사대상</span>106200573201910141</div>
+              <button class="btnEdit"><span>편집</span></button>
             </div>
           </div>
           <div class="payment">
@@ -106,8 +110,9 @@
         <div href="#" class="insurance">
           <div class="info">
             <div class="inner">
-              <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
+              <div class="name">(무)메리츠 케어프리보험 M-Basket1910</div>
               <div class="date"><span class="state">심사대상</span>106200573201910141</div>
+              <button class="btnEdit"><span>편집</span></button>
             </div>
           </div>
           <div class="payment">
@@ -130,8 +135,9 @@
         <div href="#" class="insurance">
           <div class="info">
             <div class="inner">
-              <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
+              <div class="name">(무)메리츠 케어프리보험 M-Basket1910</div>
               <div class="date"><span class="state">심사대상</span>106200573201910141</div>
+              <button class="btnEdit"><span>편집</span></button>
             </div>
           </div>
           <div class="payment">
@@ -154,8 +160,9 @@
         <div href="#" class="insurance">
           <div class="info">
             <div class="inner">
-              <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
+              <div class="name">(무)메리츠 케어프리보험 M-Basket1910</div>
               <div class="date"><span class="state">심사대상</span>106200573201910141</div>
+              <button class="btnEdit"><span>편집</span></button>
             </div>
           </div>
           <div class="payment">
