--- a/html/팝업-권장금액보장군설정.html
+++ b/html/팝업-권장금액보장군설정.html
@@ -12,7 +12,9 @@
   <script src="/asset/js/default.js"></script>
   <script>
     $(function () {
-      $(".tableScroll").mCustomScrollbar();
+      $(".tableScroll").mCustomScrollbar({
+        scrollInertia: 150
+      });
     })
   </script>
 </head>
