--- a/html/팝업-보장상세내역.html
+++ b/html/팝업-보장상세내역.html
@@ -12,7 +12,9 @@
   <script src="/asset/js/default.js"></script>
   <script>
     $(function () {
-      $(".tableScroll").mCustomScrollbar();
+      $(".tableScroll").mCustomScrollbar({
+        scrollInertia: 150
+      });
 
       //탭
       $(document).on("click", ".tabList li .tab", function () {
@@ -38,31 +40,47 @@
           <div class="logo"><img src="/asset/images/temp/logo_sample02.png" alt="삼성생명"></div>
           <div class="tit">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
           <div class="number"><span class="tit">증권번호</span> 6MA86MA86MA86MA8***</div>
-          <div class="date"><span class="state">정상</span> 2009.07.17 ~ 2082.07.17</div>
+          <div class="date"><span class="state cancel">해지</span> 2009.07.17 ~ 2082.07.17</div>
+          <!-- 상태 
+          <span class="state">정상</span> 
+          <span class="state cancel">해지</span> 
+          -->
           <div class="payment">
             <span class="tit">매월납20년</span>
             <div class="price"><strong>60,660</strong>원</div>
           </div>
         </div>
         <div class="paymentInfo">
-          <div class="payCount">
-            <div class="countBarBox">
-              <div class="barRail"><div class="bar" style="width: 56%;"><span class="percent">56%</span></div></div>
-              <span class="now"><strong>122</strong>회</span>
-              <span class="last"><strong>240</strong>회</span>
+          <!-- 정상 : s -->
+          <div class="normal" >
+            <div class="payCount">
+              <div class="countBarBox">
+                <div class="barRail"><div class="bar" style="width: 56%;"><span class="percent">56%</span></div></div>
+                <span class="now"><strong>122</strong>회</span>
+                <span class="last"><strong>240</strong>회</span>
+              </div>
+            </div>
+            <ul class="payList">
+              <li>
+                <span class="tit">납입완료</span>
+                <span class="txt complete"><strong>1,559,720</strong>원</span>
+              </li>
+              <li>
+                <span class="tit">납입횟수</span>
+                <span class="txt"><strong>8,007,48</strong>원</span>
+              </li>
+            </ul>
+            <P class="text">갱신 등이 반영되지 않은 단순 예상 보험료</P>
+          </div>
+          <!-- 정상 : e -->
+          <!--  실효해지시 노출 : s -->
+          <div class="cancel" style="display: none;">
+            <div class="text">
+              <span class="title">계약상태</span>
+              유효한 보장이 없습니다.
             </div>
           </div>
-          <ul>
-            <li>
-              <span class="tit">납입완료</span>
-              <span class="txt complete"><strong>1,559,720</strong>원</span>
-            </li>
-            <li>
-              <span class="tit">납입횟수</span>
-              <span class="txt"><strong>8,007,48</strong>원</span>
-            </li>
-          </ul>
-          <P class="text">갱신 등이 반영되지 않은 단순 예상 보험료</P>
+          <!-- 실효해지시 노출 : e -->
         </div>
       </div>
       <div class="tabWrap">
