--- a/html/index.html
+++ b/html/index.html
@@ -102,7 +102,7 @@
               <div class="th date">분석일자</div>
               <div class="th">즐겨찾기</div>
               <div class="th">보장분석</div>
-              <div class="th">동의여부</div>
+              <div class="th">LMS동의</div>
               <div class="th attend">출석</div>
             </div>
           </div>
