--- a/html/컨설팅.html
+++ b/html/컨설팅.html
@@ -634,6 +634,7 @@
         <!-- scrollArea : e -->
       </div>
       <!-- insuranceListBox : e -->
+      <button class="btnTop">상단으로</button>
     </div>
     <!-- contentArea : e -->
     <a href="#" class="btnClose"><span>닫기</span></a>
