--- a/html/컨설팅.html
+++ b/html/컨설팅.html
@@ -459,8 +459,8 @@
             <li><a href="#" class="menu menu01"><span>전체현황</span></a></li>
             <li><a href="#" class="menu menu02"><span>가입현황</span></a></li>
             <li><a href="#" class="menu menu03"><span>진단/상세</span></a></li>
-            <li><a href="#" class="menu menu04 on"><span>컨설팅</span></a></li>
-            <li><a href="#" class="menu menu05"><span>그래프</span></a></li>
+            <li><a href="#" class="menu menu04 on new"><span>컨설팅</span></a></li>
+            <li><a href="#" class="menu menu05 new"><span>그래프</span></a></li>
           </ul>
         </div>
         <div class="bottomPosition">
@@ -570,7 +570,7 @@
             <div class="titBox">
               <h3 class="tit">정상계약</h3><span class="count">+5</span>
             </div>
-            <button class="insurance">
+            <button class="insurance checked">
               <div class="info">
                 <div class="inner">
                   <div class="logo"><img src="/asset/images/temp/logo_sample01.png" alt="한화생명"></div>
