--- a/html/sub.html
+++ b/html/sub.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>submain</title>
   <link rel="stylesheet" href="/asset/css/style.css">
-  <script src="/asset/js/lib/jquery-3.4.1.min.js"></script>
+  <script src="/asset/js/lib/jquery.min.js"></script>
   <script src="/asset/js/lib/jquery.mCustomScrollbar.min.js"></script>
   <script src="/asset/js/lib/jquery.mousewheel-3.0.6.min.js"></script>
   <script src="/asset/js/lib/jquery.nice-select.min.js"></script>
@@ -606,7 +606,7 @@
         <div class="submainWrap">
           <!-- topArea : s -->
           <div class="topArea">
-            <div class="imgArea"><img src="/asset/images/main/main_top_img.png" alt=""></div>
+            <div class="imgArea"><img src="/asset/images/main/mainTopImg.png" alt=""></div>
             <div class="infoArea">
               <div class="favorites">즐겨찾기</div>
               <h2 class="title">
