--- a/html/guide.html
+++ b/html/guide.html
@@ -5,7 +5,7 @@
   <title>Guide</title>
   <link rel="stylesheet" href="/asset/css/style.css">
   <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-  <script src="/asset/js/lib/jquery-3.4.1.min.js"></script>
+  <script src="/asset/js/lib/jquery.min.js"></script>
   <script src="/asset/js/lib/jquery.mCustomScrollbar.min.js"></script>
   <script src="/asset/js/lib/jquery.mousewheel-3.0.6.min.js"></script>
   <script src="/asset/js/lib/jquery.nice-select.min.js"></script>
