--- a/html/가입현황.html
+++ b/html/가입현황.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>submain</title>
   <link rel="stylesheet" href="/asset/css/style.css">
-  <script src="/asset/js/lib/jquery-3.4.1.min.js"></script>
+  <script src="/asset/js/lib/jquery.min.js"></script>
   <script src="/asset/js/lib/jquery.mCustomScrollbar.min.js"></script>
   <script src="/asset/js/lib/jquery.mousewheel-3.0.6.min.js"></script>
   <script src="/asset/js/lib/jquery.nice-select.min.js"></script>
