--- a/html/팝업-가계약조회리스트.html
+++ b/html/팝업-가계약조회리스트.html
@@ -15,6 +15,7 @@
       $(".contract_scroll").mCustomScrollbar({
         scrollInertia: 150
       });
+      counterStart();
     })
   </script>
 </head>
@@ -60,7 +61,7 @@
         <div class="insurance" href="#">
           <div class="info">
             <div class="inner">
-              <div class="name">(무)메리츠 케어프리보험 _m-_basket1910</div>
+              <div class="name">(무)메리츠 케어프리보험 M-Basket1910</div>
               <div class="date"><span class="state">심사대상</span>106200573201910141</div>
               <button class="btn_edit"><span>편집</span></button>
             </div>
@@ -69,7 +70,7 @@
             <ul>
               <li class="top">
                 <span class="th">보험료</span>
-                <span class="td"><strong>1,000,000</strong>원</span>
+                <span class="td"><strong class="count">1000000</strong>원</span>
               </li>
               <li>
                 <span class="th">납입만기</span>
@@ -85,7 +86,7 @@
         <div class="insurance" href="#">
           <div class="info">
             <div class="inner">
-              <div class="name">(무)메리츠 케어프리보험 _m-_basket1910</div>
+              <div class="name">(무)메리츠 케어프리보험 M-Basket1910</div>
               <div class="date"><span class="state">심사대상</span>106200573201910141</div>
               <button class="btn_edit"><span>편집</span></button>
             </div>
@@ -94,7 +95,7 @@
             <ul>
               <li class="top">
                 <span class="th">보험료</span>
-                <span class="td"><strong>1,000,000</strong>원</span>
+                <span class="td"><strong class="count">1000000</strong>원</span>
               </li>
               <li>
                 <span class="th">납입만기</span>
@@ -110,7 +111,7 @@
         <div class="insurance" href="#">
           <div class="info">
             <div class="inner">
-              <div class="name">(무)메리츠 케어프리보험 _m-_basket1910</div>
+              <div class="name">(무)메리츠 케어프리보험 M-Basket1910</div>
               <div class="date"><span class="state">심사대상</span>106200573201910141</div>
               <button class="btn_edit"><span>편집</span></button>
             </div>
@@ -119,7 +120,7 @@
             <ul>
               <li class="top">
                 <span class="th">보험료</span>
-                <span class="td"><strong>1,000,000</strong>원</span>
+                <span class="td"><strong class="count">1000000</strong>원</span>
               </li>
               <li>
                 <span class="th">납입만기</span>
@@ -135,7 +136,7 @@
         <div class="insurance" href="#">
           <div class="info">
             <div class="inner">
-              <div class="name">(무)메리츠 케어프리보험 _m-_basket1910</div>
+              <div class="name">(무)메리츠 케어프리보험 M-Basket1910</div>
               <div class="date"><span class="state">심사대상</span>106200573201910141</div>
               <button class="btn_edit"><span>편집</span></button>
             </div>
@@ -144,7 +145,7 @@
             <ul>
               <li class="top">
                 <span class="th">보험료</span>
-                <span class="td"><strong>1,000,000</strong>원</span>
+                <span class="td"><strong class="count">1000000</strong>원</span>
               </li>
               <li>
                 <span class="th">납입만기</span>
@@ -160,7 +161,7 @@
         <div class="insurance" href="#">
           <div class="info">
             <div class="inner">
-              <div class="name">(무)메리츠 케어프리보험 _m-_basket1910</div>
+              <div class="name">(무)메리츠 케어프리보험 M-Basket1910</div>
               <div class="date"><span class="state">심사대상</span>106200573201910141</div>
               <button class="btn_edit"><span>편집</span></button>
             </div>
@@ -169,7 +170,7 @@
             <ul>
               <li class="top">
                 <span class="th">보험료</span>
-                <span class="td"><strong>1,000,000</strong>원</span>
+                <span class="td"><strong class="count">1000000</strong>원</span>
               </li>
               <li>
                 <span class="th">납입만기</span>
