--- a/html/팝업-컨설팅전후비교.html
+++ b/html/팝업-컨설팅전후비교.html
@@ -124,6 +124,7 @@
       //차트 그리기
       makeChart('chartdiv1');
       makeChart('chartdiv2');
+      counterStart();
     })
   </script>
 </head>
@@ -152,22 +153,22 @@
             </ul>
             <ul>
               <li class="title">월보험료</li>
-              <li class="text"><strong>1,270,660</strong>원</li>
+              <li class="text"><strong class="count">1270660</strong>원</li>
             </ul>
           </div>
           <div class="graph_area" id="chartdiv1"></div>
           <ul class="info_box">
             <li class="no">
               <span class="tit">미가입</span>
-              <span class="number">35</span>
+              <span class="number count">35</span>
             </li>
             <li class="lack">
               <span class="tit">부족</span>
-              <span class="number">35</span>
+              <span class="number count">35</span>
             </li>
             <li class="good">
               <span class="tit">충분</span>
-              <span class="number">35</span>
+              <span class="number count">35</span>
             </li>
           </ul>
         </div>
@@ -180,22 +181,22 @@
             </ul>
             <ul>
               <li class="title">월보험료</li>
-              <li class="text"><strong>1,270,660</strong>원</li>
+              <li class="text"><strong class="count">1270660</strong>원</li>
             </ul>
           </div>
           <div class="graph_area" id="chartdiv2"></div>
           <ul class="info_box">
             <li class="no">
               <span class="tit">미가입</span>
-              <span class="number">35</span>
+              <span class="number count">35</span>
             </li>
             <li class="lack">
               <span class="tit">부족</span>
-              <span class="number">35</span>
+              <span class="number count">35</span>
             </li>
             <li class="good">
               <span class="tit">충분</span>
-              <span class="number">35</span>
+              <span class="number count">35</span>
             </li>
           </ul>
         </div>
