--- a/html/index.html
+++ b/html/index.html
@@ -518,20 +518,20 @@
         <ul class="sorting_list">
           <li>
             <div class="check_box_set">
-              <input id="checkbox1" type="checkbox">
-              <label for="checkbox1">즐겨찾기</label>
+              <input id="checkboxm_1" type="checkbox">
+              <label for="checkboxm_1">즐겨찾기</label>
             </div>
           </li>
           <li>
             <div class="check_box_set">
-              <input id="checkbox2" type="checkbox">
-              <label for="checkbox2">동의종료D-7</label>
+              <input id="checkboxm_2" type="checkbox">
+              <label for="checkboxm_2">동의종료D-7</label>
             </div>
           </li>
           <li>
             <div class="check_box_set">
-              <input id="checkbox3" type="checkbox">
-              <label for="checkbox3">보장분석</label>
+              <input id="checkboxm_3" type="checkbox">
+              <label for="checkboxm_3">보장분석</label>
             </div>
           </li>
         </ul>
