--- a/html/팝업-가계약조회리스트.html
+++ b/html/팝업-가계약조회리스트.html
@@ -14,8 +14,7 @@
     $(function () {
       $(".contract_scroll").mCustomScrollbar({
         scrollInertia: 150
-      });
-      counterStart();
+      });      
     })
   </script>
 </head>
@@ -70,7 +69,7 @@
             <ul>
               <li class="top">
                 <span class="th">보험료</span>
-                <span class="td"><strong class="count">1000000</strong>원</span>
+                <span class="td"><strong>1,000,000</strong>원</span>
               </li>
               <li>
                 <span class="th">납입만기</span>
@@ -95,7 +94,7 @@
             <ul>
               <li class="top">
                 <span class="th">보험료</span>
-                <span class="td"><strong class="count">1000000</strong>원</span>
+                <span class="td"><strong>1,000,000</strong>원</span>
               </li>
               <li>
                 <span class="th">납입만기</span>
@@ -120,7 +119,7 @@
             <ul>
               <li class="top">
                 <span class="th">보험료</span>
-                <span class="td"><strong class="count">1000000</strong>원</span>
+                <span class="td"><strong>1,000,000</strong>원</span>
               </li>
               <li>
                 <span class="th">납입만기</span>
@@ -145,7 +144,7 @@
             <ul>
               <li class="top">
                 <span class="th">보험료</span>
-                <span class="td"><strong class="count">1000000</strong>원</span>
+                <span class="td"><strong>1,000,000</strong>원</span>
               </li>
               <li>
                 <span class="th">납입만기</span>
@@ -170,7 +169,7 @@
             <ul>
               <li class="top">
                 <span class="th">보험료</span>
-                <span class="td"><strong class="count">1000000</strong>원</span>
+                <span class="td"><strong>1,000,000</strong>원</span>
               </li>
               <li>
                 <span class="th">납입만기</span>
